feat: integrated get and post endpoints in the frontend

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=https://3gtbwtmb3b2ztuclas4sbztznm0jafns.lambda-url.us-east-1.on.aws
+VITE_API_STORE_URL=https://gcfxrbdzep7uodbbwjtt7l5feu0fqgrb.lambda-url.us-east-1.on.aws
+VITE_API_GET_URL=https://agg75x6kd5p3hsmdasujgni62m0hxyhu.lambda-url.us-east-1.on.aws
