--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "autoprefixer": "^10.4.19",
+    "aws-rum-web": "^1.17.2",
     "ksuid": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
