feat: updated frontend to use one URL and modify README

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,1 @@
-VITE_API_STORE_URL=https://post-url.lambda-url.your-region.on.aws
-VITE_API_GET_URL=https://get-url.lambda-url.your-region.on.aws
+VITE_API_URL=https://id.cloudfront.net
